<resources>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="app_name">雪狐FM</string>
    <string name="clear_history">清空历史</string>
    <string name="about">关于</string>
    <string name="account_bind">账号绑定</string>
    <string name="action_clear">清除缓存</string>
    <string name="action_printf_domain">打印域名表</string>
    <string name="action_printf_ip">打印IP表</string>
    <string name="action_settings">Settings</string>
    <string name="activity_apply">开始报名</string>
    <string name="activity_finish">活动结束</string>
    <string name="activity_ing">活动中</string>
    <string name="add_download_fail">下载失败</string>
    <string name="add_download_success">加入下载队列成功</string>
    <string name="advertisement_service">广告服务</string>
    <string name="al_app_name">喜马拉雅</string>
    <string name="al_btn_collect">订阅</string>
    <string name="al_btn_history">历史</string>
    <string name="al_btn_hot_album">推荐专辑</string>
    <string name="al_btn_hot_sound">热门声音</string>
    <string name="al_btn_local">本地</string>
    <string name="al_hello">欢迎使用喜马拉雅</string>
    <string name="al_hello_1">随时随地想听就听</string>
    <string name="al_title_collect">我的订阅</string>
    <string name="al_title_history">播放历史</string>
    <string name="al_title_hot_album">推荐专辑</string>
    <string name="al_title_hot_sound">热门声音</string>
    <string name="al_title_local">本地专辑</string>
    <string name="al_use_mobile_data_tip">,使用喜马拉雅将会消耗您的数据流量</string>
    <string name="alarm_content">闹钟时间到了</string>
    <string name="alarm_get_up">起床</string>
    <string name="alarm_help">闹铃帮助</string>
    <string name="alarm_help_360">已安装360卫士</string>
    <string name="alarm_help_baidu">已安装百度手机卫士</string>
    <string name="alarm_help_info">喜马拉雅已检测到您已安装下列应用，为了确保闹铃功能正常工作，请按照以下说明检查您的设备并进行设置。</string>
    <string name="alarm_help_lbe">已安装LBE安全大师</string>
    <string name="alarm_help_liebao">已安装猎豹清理大师</string>
    <string name="alarm_help_tencent">已安装腾讯手机管家</string>
    <string name="alarm_help_using_miui">正在使用MIUI系统</string>
    <string name="alarm_later">小睡10分钟</string>
    <string name="alarm_later_content">喜马拉雅闹铃</string>
    <string name="alarm_later_title">10分钟后闹铃再响</string>
    <string name="alarm_swith">闹铃开关</string>
    <string name="alarm_title">闹钟提醒</string>
    <string name="album_anchor_more">查看更多内容</string>
    <string name="album_anchor_title">内容简介</string>
    <string name="album_comment_all_title">所有评价</string>
    <string name="album_comment_entrance">我要评价</string>
    <string name="album_comment_more">查看更多评价</string>
    <string name="album_comment_nodata">暂无评价</string>
    <string name="album_comment_nodata_intro">快来抢伦家的＂第一次＂哦～</string>
    <string name="album_commented">您已经评价过本专辑~</string>
    <string name="album_copyright">版权方</string>
    <string name="album_free_listen">免费试听</string>
    <string name="album_off_sale">您所访问的专辑已下架</string>
    <string name="album_recommend_more">查看更多推荐</string>
    <string name="album_score">%1$s分/%2$s人评价</string>
    <string name="album_title">专辑详情</string>
    <string name="alipay">支付宝支付</string>
    <string name="all">全部</string>
    <string name="all_reply">全部回复</string>
    <string name="anchor_attestation">主播V认证</string>
    <string name="anchor_level">主播水平</string>
    <string name="anchor_manager_center">主播管理中心</string>
    <string name="apk_name_prefix">ting_</string>
    <string name="app_widget_label_4x1">喜马拉雅(4 x 1)</string>
    <string name="app_widget_label_4x2">喜马拉雅(4 x 2)</string>
    <string name="audio">有声化平台Audio+</string>
    <string name="back">后退</string>
    <string name="begin_download">开始下载当前声音</string>
    <string name="best_hot">最火</string>
    <string name="best_new">最新</string>
    <string name="bind">绑定</string>
    <string name="bind_expire">已过期</string>
    <string name="bind_tingshuobao">绑定听书宝</string>
    <string name="binding">正在绑定，请稍后…</string>
    <string name="buy">购买</string>
    <string name="buy_album">购买全辑</string>
    <string name="buy_all_paid">下载全部已购声音</string>
    <string name="buy_batch">批量购买</string>
    <string name="buy_choosed">购买已选</string>
    <string name="buy_log">充值记录</string>
    <string name="buy_now">立即购买</string>
    <string name="buy_without_confirm">不差钱，下次不用提示确认啦~</string>
    <string name="buyedsound">已购声音</string>
    <string name="cancel">取消</string>
    <string name="cancel_collect_success">已取消订阅！</string>
    <string name="cancle_like">确定要取消赞？</string>
    <string name="cannot_find_info">找不到信息,请返回列表,进入播放再重试</string>
    <string name="cannot_get_local">无法获取到位置信息，请在手机设置中打开喜马拉雅FM应用位置信息的读取权限</string>
    <string name="car_mode">车载模式</string>
    <string name="carlink_hot_albums">热门专辑</string>
    <string name="carlink_hot_tracks">热门节目</string>
    <string name="carlink_my_collect">我的订阅</string>
    <string name="carlink_my_download">我的下载</string>
    <string name="carlink_my_history">收听历史</string>
    <string name="carlink_tip_load_fail">加载失败，请点击重试</string>
    <string name="carlink_tip_loading">正在加载...</string>
    <string name="carlink_tip_test">显示测试信息</string>
    <string name="category">分类</string>
    <string name="change_phone_number">更换手机号</string>
    <string name="change_pwd">修改密码</string>
    <string name="check_update">检查更新</string>
    <string name="choose_category">请选择类别/筛选:</string>
    <string name="circle">圈子</string>
    <string name="city_column">本地听</string>
    <string name="classic">经典</string>
    <string name="click_to_reload">点击重新加载</string>
    <string name="close_auto_buy_tip">关闭自动购买提示</string>
    <string name="close_danmu_because_net">当前为移动网络，弹幕默认关闭</string>
    <string name="collect_album">我订阅的专辑</string>
    <string name="collect_success">订阅成功！</string>
    <string name="comment_all_title">所有评论</string>
    <string name="comment_detail">详细评论</string>
    <string name="comment_fail">回复成功</string>
    <string name="comment_hint">写几句评价吧，这是对作者最大的鼓励。</string>
    <string name="comment_success">回复成功</string>
    <string name="comment_tips">剩余%d个字</string>
    <string name="comment_toast">剩余140个字</string>
    <string name="comment_words_hint">（至少10个字）</string>
    <string name="commit">提交</string>
    <string name="complete">完成</string>
    <string name="confirm">确认</string>
    <string name="confirm_clean_history">确认清空播放历史？</string>
    <string name="confirm_delete_all_track_in_album">确定删除该专辑的所有声音？</string>
    <string name="confirm_uncollect_album">确定取消订阅该专辑？</string>
    <string name="consume_log">消费记录</string>
    <string name="contact_us">联系我们</string>
    <string name="content">内容</string>
    <string name="contentDescription">内容简介</string>
    <string name="crosstalk_sounds">相声闹铃</string>
    <string name="d_aini">[爱你]</string>
    <string name="d_aoteman">[奥特曼]</string>
    <string name="d_baibai">[拜拜]</string>
    <string name="d_beishang">[悲伤]</string>
    <string name="d_bishi">[鄙视]</string>
    <string name="d_bizui">[闭嘴]</string>
    <string name="d_chanzui">[馋嘴]</string>
    <string name="d_chijing">[吃惊]</string>
    <string name="d_dahaqi">[打哈气]</string>
    <string name="d_ding">[顶]</string>
    <string name="d_fennu">[愤怒]</string>
    <string name="d_ganmao">[感冒]</string>
    <string name="d_guzhang">[鼓掌]</string>
    <string name="d_haha">[哈哈]</string>
    <string name="d_haixiu">[害羞]</string>
    <string name="d_han">[汗]</string>
    <string name="d_hehe">[呵呵]</string>
    <string name="d_heixian">[黑线]</string>
    <string name="d_heng">[哼]</string>
    <string name="d_huaxin">[花心]</string>
    <string name="d_keai">[可爱]</string>
    <string name="d_kelian">[可怜]</string>
    <string name="d_ku">[酷]</string>
    <string name="d_kun">[困]</string>
    <string name="d_landelini">[懒得理你]</string>
    <string name="d_lei">[泪]</string>
    <string name="d_nanhaier">[男孩儿]</string>
    <string name="d_nu">[怒]</string>
    <string name="d_numa">[怒骂]</string>
    <string name="d_nvhaier">[女孩儿]</string>
    <string name="d_qian">[钱]</string>
    <string name="d_qinqin">[亲亲]</string>
    <string name="d_shengbing">[生病]</string>
    <string name="d_shiwang">[失望]</string>
    <string name="d_shuai">[衰]</string>
    <string name="d_shudaizi">[书呆子]</string>
    <string name="d_shuijiao">[睡觉]</string>
    <string name="d_sikao">[思考]</string>
    <string name="d_taikaixin">[太开心]</string>
    <string name="d_touxiao">[偷笑]</string>
    <string name="d_tu">[吐]</string>
    <string name="d_tuzi">[兔子]</string>
    <string name="d_wabishi">[挖鼻屎]</string>
    <string name="d_weiqu">[委屈]</string>
    <string name="d_xiongmao">[熊猫]</string>
    <string name="d_xixi">[嘻嘻]</string>
    <string name="d_xu">[嘘]</string>
    <string name="d_yinxian">[阴险]</string>
    <string name="d_yiwen">[疑问]</string>
    <string name="d_youhengheng">[右哼哼]</string>
    <string name="d_yun">[晕]</string>
    <string name="d_zhuakuang">[抓狂]</string>
    <string name="d_zhutou">[猪头]</string>
    <string name="d_zuoguilian">[做鬼脸]</string>
    <string name="d_zuohengheng">[左哼哼]</string>
    <string name="day_concat">", "</string>
    <string name="debug_tone">测试</string>
    <string name="default_sounds">默认铃声</string>
    <string name="del">删除</string>
    <string name="del_fail">删除失败，请稍后再试</string>
    <string name="del_success">删除成功！</string>
    <string name="deny_perm_bluntooth">蓝牙权限被禁止</string>
    <string name="deny_perm_lastcontent">可在设置中重新授权</string>
    <string name="deny_perm_read_contacts">读取联系人权限被禁止</string>
    <string name="deny_perm_read_phone_state">读取通话状态权限被禁止，拨打电话无法自动暂停播放</string>
    <string name="deny_perm_record">录音权限被禁止</string>
    <string name="deny_perm_sdcard">写入SD卡权限被禁止，下载内容无法存储在SD卡</string>
    <string name="difference_not_enough">余额不足</string>
    <string name="discovery_special">发现新奇</string>
    <string name="down_cache">下载和缓存设置</string>
    <string name="down_path">下载位置</string>
    <string name="down_ring_title">已下载声音</string>
    <string name="download_doss">下载到听书宝</string>
    <string name="download_later">稍后下载</string>
    <string name="download_now">现在下载</string>
    <string name="download_without_wifi">2G/3G/4G播放和下载</string>
    <string name="downloaded_sounds">从已下载的声音中选择</string>
    <string name="downloaded_sounds_title">已下载声音</string>
    <string name="downloading_for_you">亲~正在为您下载全辑</string>
    <string name="duplicate_download_task">不能重复下载</string>
    <string name="editor">小编：</string>
    <string name="editor_recommend">小编推荐</string>
    <string name="email">邮箱：</string>
    <string name="empty_track_history">亲~你还没有播放过声音哦</string>
    <string name="every_day">每天</string>
    <string name="exit_message">确定退出喜马拉雅FM？</string>
    <string name="f_geili">[给力]</string>
    <string name="f_hufen">[互粉]</string>
    <string name="f_jiong">[囧]</string>
    <string name="f_meng">[萌]</string>
    <string name="f_shenma">[神马]</string>
    <string name="f_shuai">[帅]</string>
    <string name="f_v5">[威武]</string>
    <string name="f_xi">[喜]</string>
    <string name="f_zhi">[织]</string>
    <string name="feed_recycle">恢复</string>
    <string name="feed_recycle_info">被隐藏的内容，将不会再推送到你的动态中。恢复隐藏内容后，可收到内容推送。</string>
    <string name="forget_password">忘记密码？</string>
    <string name="input_6_16_num">输入6–16位数字或字母</string>
    <string name="login">登录</string>
    <string name="login_meizu">魅族登录</string>
    <string name="login_qq">QQ登录</string>
    <string name="login_weibo">微博登录</string>
    <string name="login_weixin">微信登录</string>
    <string name="login_xiaomi">小米登录</string>
    <string name="mail_or_phone">邮箱或者手机号</string>
    <string name="register">注册</string>
</resources>